# ulmo-fathom

./: .gitignore  CLAUDE.md  Dockerfile  README.md  environment.yml  pyproject.toml
apis/: detection.openapi.yaml  grams.openapi.yaml  ingestion.openapi.yaml
artifacts/: sprint5_test_partition.json
artifacts/sprint3_splits/: deepship_splits.json  deepship_splits.json.sha256
artifacts/sprint5_c6/: operator_recognition_verdicts.md
artifacts/sprint5_ratio_sweep/: aggregate.json  (+1 more)
configs/: sprint1.yaml  sprint2.yaml  sprint3.yaml
docs/: architecture.md  data_access.md  icp_display_conventions.md
scripts/: aggregate_ratio_sweep.py  build_splits.py  build_synthetic_b1.py  build_synthetic_c1_1.py  build_training_dataset.py  c1_3_lite_smoke.py  c1_tier2_smoke.py  c4_classical_vs_ml.py  evaluate_ml_detector.py  extract_dclde_2018_clips.py  eyeball_v2_clips.py  far_sweep.py  measure_calibration.py  precompute_lofar_grams.py  sanity_check_grams.py  sanity_check_lines.py  sprint3_demo.py  sprint5_c2_launcher.sh  sprint5_c6_render.py  sprint6_aprime_build.py  sprint6_b_launcher.sh  sprint6_conformal_pipeline.py  sprint6_d0_reserve_build.py  sprint6_ensemble_eval.py  sprint6_panel_render.py  sprint6_per_snr_calibration.py  sprint6_reliability_diagrams.py  train_ml_detector.py
src/fathom/: __init__.py  (+3 more)
tests/: test_calibration_conformal.py  test_calibration_ensemble.py  test_detection.py  test_ingestion.py  test_lofar.py  test_merge.py  test_ml_detector.py  test_models.py  test_normalization_tpsw.py  test_resample.py  test_synthetic.py  test_synthetic_propagation.py
(+171 files in other folders)
